this is mostly done html and css framework for the angular project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Calendar Experiment - August 2014</title>
 	<meta charset="utf-8" name="viewport" content="width-device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 </head>
 <body>
 	<div id="calendar-wrap">
